--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "date-fns": "^3.4.0",
+    "http-status-codes": "^2.3.0",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.5.0",
@@ -36,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "remix-i18next": "^6.0.1",
+    "remix-utils": "^7.5.0",
     "uuid-mongodb": "^2.5.5",
     "zod": "^3.22.4"
   },
