--- a/package.json
+++ b/package.json
@@ -17,40 +17,42 @@
     "sass": "sass --watch app/:app/ -I styles --style=compressed --no-source-map"
   },
   "dependencies": {
-    "@mantine/core": "^7.6.2",
-    "@mantine/hooks": "^7.6.2",
+    "@mantine/core": "^7.7.1",
+    "@mantine/hooks": "^7.7.1",
     "@remix-run/cloudflare": "^2.8.1",
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
-    "date-fns": "^3.4.0",
+    "date-fns": "^3.6.0",
     "http-status-codes": "^2.3.0",
     "i18next": "^23.10.1",
-    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.0",
-    "isbot": "5.1.1",
+    "isbot": "5.1.3",
     "jsonwebtoken": "^9.0.2",
-    "miniflare": "^3.20240304.1",
+    "miniflare": "^3.20240320.1",
     "mongodb": "^6.5.0",
-    "oauth4webapi": "^2.10.3",
+    "oauth4webapi": "^2.10.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "remix-i18next": "^6.0.1",
     "remix-utils": "^7.5.0",
     "uuid-mongodb": "^2.5.5",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240312.0",
+    "@cloudflare/workers-types": "^4.20240329.0",
     "@remix-run/dev": "^2.8.1",
-    "@stylistic/eslint-plugin": "^1.6.3",
+    "@stylistic/eslint-plugin": "^1.7.0",
+    "@tanstack/eslint-plugin-query": "^5.28.6",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/react": "^18.2.65",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "autoprefixer": "^10.4.18",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.23",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-config-flat-gitignore": "0.1.3",
@@ -58,17 +60,19 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "node-fetch": "^3.3.2",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
-    "sass": "^1.71.1",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.6",
-    "vite-tsconfig-paths": "^4.3.1",
-    "wrangler": "^3.33.0"
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "sass": "^1.72.0",
+    "typescript": "^5.4.3",
+    "vite": "^5.2.7",
+    "vite-tsconfig-paths": "^4.3.2",
+    "wrangler": "^3.41.0"
   },
   "engines": {
     "node": ">=18.0.0"
