fixed scss import

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,11 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
     "files.autoSave": "afterDelay",
+    "cssVariables.lookupFiles": [
+      "**/*.css",
+      "**/*.scss",
+      "**/*.sass",
+      "**/*.less",
+      "node_modules/@mantine/core/styles.css"
+    ]
 }
