--- a/package.json
+++ b/package.json
@@ -14,47 +14,49 @@
         "typegen": "wrangler types"
     },
     "dependencies": {
-        "@mantine/core": "^7.7.1",
-        "@mantine/hooks": "^7.7.1",
+        "@mantine/core": "^7.8.0",
+        "@mantine/hooks": "^7.8.0",
         "@remix-run/cloudflare": "^2.8.1",
         "@remix-run/cloudflare-pages": "^2.8.1",
-        "@remix-run/node": "^2.8.1",
         "@remix-run/react": "^2.8.1",
-        "@tabler/icons-react": "^3.1.0",
+        "@tabler/icons-react": "^3.2.0",
         "classnames": "^2.5.1",
         "date-fns": "^3.6.0",
         "http-status-codes": "^2.3.0",
-        "i18next": "^23.10.1",
+        "i18next": "^23.11.2",
         "i18next-browser-languagedetector": "^7.2.1",
         "i18next-http-backend": "^2.5.0",
-        "isbot": "5.1.3",
+        "ioredis": "^5.3.2",
+        "isbot": "5.1.4",
         "jsonwebtoken": "^9.0.2",
-        "miniflare": "^3.20240320.1",
+        "miniflare": "^3.20240405.1",
         "mongodb": "^6.5.0",
         "oauth4webapi": "^2.10.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^14.1.0",
-        "remix-i18next": "^6.0.1",
-        "remix-utils": "^7.5.0",
+        "remix-i18next": "^6.1.0",
+        "remix-utils": "^7.6.0",
+        "usehooks-ts": "^3.1.0",
         "uuid-mongodb": "^2.5.5",
         "zod": "^3.22.4",
         "zod-form-data": "^2.0.2"
     },
     "devDependencies": {
-        "@cloudflare/workers-types": "^4.20240329.0",
+        "@cloudflare/workers-types": "^4.20240405.0",
         "@remix-run/dev": "^2.8.1",
-        "@stylistic/eslint-plugin": "^1.7.0",
-        "@tanstack/eslint-plugin-query": "^5.28.6",
+        "@stylistic/eslint-plugin": "^1.7.2",
+        "@tanstack/eslint-plugin-query": "^5.28.11",
         "@types/jsonwebtoken": "^9.0.6",
-        "@types/react": "^18.2.73",
-        "@types/react-dom": "^18.2.23",
-        "@typescript-eslint/eslint-plugin": "^7.4.0",
-        "@typescript-eslint/parser": "^7.4.0",
+        "@types/react": "^18.2.79",
+        "@types/react-dom": "^18.2.25",
+        "@typescript-eslint/eslint-plugin": "^7.7.0",
+        "@typescript-eslint/parser": "^7.7.0",
         "autoprefixer": "^10.4.19",
         "csstype": "^3.1.3",
+        "esbuild": "^0.20.2",
         "eslint": "^8.57.0",
-        "eslint-config-flat-gitignore": "0.1.3",
+        "eslint-config-flat-gitignore": "0.1.5",
         "eslint-config-prettier": "^9.1.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.29.1",
@@ -65,11 +67,11 @@
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
         "prettier-plugin-organize-imports": "^3.2.4",
-        "sass": "^1.72.0",
-        "typescript": "^5.4.3",
-        "vite": "^5.2.7",
+        "sass": "^1.75.0",
+        "typescript": "^5.4.5",
+        "vite": "^5.2.9",
         "vite-tsconfig-paths": "^4.3.2",
-        "wrangler": "^3.41.0"
+        "wrangler": "^3.50.0"
     },
     "engines": {
         "node": ">=18.0.0"
