--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
-    "plugins": ["prettier-plugin-organize-imports"],
+    "plugins": [
+        "prettier-plugin-tailwindcss",
+        "prettier-plugin-organize-imports"
+    ],
     "singleQuote": true,
     "tabWidth": 4,
     "semi": true,
