--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "node-terminal",
+            "name": "Run Script: build:proto",
+            "request": "launch",
+            "command": "pnpm run build:proto",
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "node-terminal",
             "name": "Run Script: dev",
             "request": "launch",
             "command": "pnpm run dev",
