--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "sideEffects": false,
     "type": "module",
     "scripts": {
+        "preinstall": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0",
+        "build:proto": "cross-env PROTO_PATH=./app/proto tsx ./proto/proto-generator.ts",
+        "prebuild": "cross-env PROTO_PATH=./app/proto tsx ./proto/proto-generator.ts",
         "build": "remix vite:build",
         "deploy": "wrangler pages deploy ./build/client",
         "dev": "remix vite:dev",
@@ -14,64 +17,79 @@
         "typegen": "wrangler types"
     },
     "dependencies": {
-        "@mantine/core": "^7.8.0",
-        "@mantine/hooks": "^7.8.0",
-        "@remix-run/cloudflare": "^2.8.1",
-        "@remix-run/cloudflare-pages": "^2.8.1",
-        "@remix-run/react": "^2.8.1",
+        "@grpc/grpc-js": "^1.10.6",
+        "@grpc/proto-loader": "^0.7.12",
+        "@mantine/core": "^7.8.1",
+        "@mantine/hooks": "^7.8.1",
+        "@remix-run/cloudflare": "^2.9.1",
+        "@remix-run/cloudflare-pages": "^2.9.1",
+        "@remix-run/react": "^2.9.1",
+        "@remix-run/server-runtime": "^2.9.1",
         "@tabler/icons-react": "^3.2.0",
         "classnames": "^2.5.1",
         "date-fns": "^3.6.0",
         "http-status-codes": "^2.3.0",
         "i18next": "^23.11.2",
         "i18next-browser-languagedetector": "^7.2.1",
-        "i18next-http-backend": "^2.5.0",
-        "ioredis": "^5.3.2",
-        "isbot": "5.1.4",
+        "i18next-http-backend": "^2.5.1",
+        "ioredis": "^5.4.1",
+        "isbot": "5.1.5",
         "jsonwebtoken": "^9.0.2",
-        "miniflare": "^3.20240405.1",
+        "miniflare": "^3.20240419.0",
         "mongodb": "^6.5.0",
         "oauth4webapi": "^2.10.4",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-i18next": "^14.1.0",
+        "proto3-json-serializer": "^2.0.1",
+        "protobufjs": "^7.2.6",
+        "protobufjs-cli": "^1.1.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-i18next": "^14.1.1",
         "remix-i18next": "^6.1.0",
         "remix-utils": "^7.6.0",
+        "rimraf": "^5.0.5",
+        "shelljs": "^0.8.5",
+        "tailwindcss": "^3.4.3",
         "usehooks-ts": "^3.1.0",
         "uuid-mongodb": "^2.5.5",
-        "zod": "^3.22.4",
+        "zod": "^3.23.4",
         "zod-form-data": "^2.0.2"
     },
     "devDependencies": {
-        "@cloudflare/workers-types": "^4.20240405.0",
-        "@remix-run/dev": "^2.8.1",
+        "@cloudflare/workers-types": "^4.20240423.0",
+        "@eslint/js": "^9.1.1",
+        "@remix-run/dev": "^2.9.1",
         "@stylistic/eslint-plugin": "^1.7.2",
-        "@tanstack/eslint-plugin-query": "^5.28.11",
         "@types/jsonwebtoken": "^9.0.6",
-        "@types/react": "^18.2.79",
-        "@types/react-dom": "^18.2.25",
-        "@typescript-eslint/eslint-plugin": "^7.7.0",
-        "@typescript-eslint/parser": "^7.7.0",
+        "@types/react": "^18.3.1",
+        "@types/react-dom": "^18.3.0",
+        "@types/shelljs": "^0.8.15",
+        "@typescript-eslint/eslint-plugin": "^7.7.1",
+        "@typescript-eslint/parser": "^7.7.1",
         "autoprefixer": "^10.4.19",
+        "cross-env": "^7.0.3",
         "csstype": "^3.1.3",
         "esbuild": "^0.20.2",
-        "eslint": "^8.57.0",
+        "eslint": "^9.1.1",
         "eslint-config-flat-gitignore": "0.1.5",
         "eslint-config-prettier": "^9.1.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-react": "^7.34.1",
-        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-tailwindcss": "^3.15.1",
+        "globals": "^15.0.0",
         "node-fetch": "^3.3.2",
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
         "prettier-plugin-organize-imports": "^3.2.4",
+        "prettier-plugin-tailwindcss": "^0.5.14",
         "sass": "^1.75.0",
+        "tsx": "^4.7.3",
         "typescript": "^5.4.5",
-        "vite": "^5.2.9",
+        "vite": "^5.2.10",
         "vite-tsconfig-paths": "^4.3.2",
-        "wrangler": "^3.50.0"
+        "wrangler": "^3.52.0"
     },
     "engines": {
         "node": ">=18.0.0"
