--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
         "typecheck": "tsc"
     },
     "dependencies": {
-        "@grpc/grpc-js": "^1.10.6",
-        "@grpc/proto-loader": "^0.7.12",
-        "@mantine/core": "^7.8.1",
-        "@mantine/hooks": "^7.8.1",
+        "@grpc/grpc-js": "^1.10.7",
+        "@grpc/proto-loader": "^0.7.13",
+        "@mantine/core": "^7.9.0",
+        "@mantine/hooks": "^7.9.0",
         "@remix-run/node": "^2.9.1",
         "@remix-run/react": "^2.9.1",
         "@remix-run/serve": "^2.9.1",
         "@remix-run/server-runtime": "^2.9.1",
-        "@tabler/icons-react": "^3.2.0",
+        "@tabler/icons-react": "^3.3.0",
         "classnames": "^2.5.1",
         "date-fns": "^3.6.0",
         "http-status-codes": "^2.3.0",
-        "i18next": "^23.11.2",
+        "i18next": "^23.11.3",
         "i18next-browser-languagedetector": "^7.2.1",
         "i18next-http-backend": "^2.5.1",
         "ioredis": "^5.4.1",
-        "isbot": "5.1.5",
+        "isbot": "5.1.6",
         "jsonwebtoken": "^9.0.2",
         "miniflare": "^3.20240419.0",
-        "mongodb": "^6.5.0",
+        "mongodb": "^6.6.0",
         "oauth4webapi": "^2.10.4",
         "proto3-json-serializer": "^2.0.1",
         "protobufjs": "^7.2.6",
@@ -48,22 +48,23 @@
         "tailwindcss": "^3.4.3",
         "usehooks-ts": "^3.1.0",
         "uuid-mongodb": "^2.5.5",
-        "zod": "^3.23.4",
+        "vite-env-only": "^2.2.1",
+        "zod": "^3.23.6",
         "zod-form-data": "^2.0.2"
     },
     "devDependencies": {
-        "@eslint/js": "^9.1.1",
+        "@eslint/js": "^9.2.0",
         "@remix-run/dev": "^2.9.1",
-        "@stylistic/eslint-plugin": "^1.7.2",
+        "@stylistic/eslint-plugin": "^1.8.0",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/react": "^18.3.1",
         "@types/react-dom": "^18.3.0",
         "@types/shelljs": "^0.8.15",
-        "@typescript-eslint/eslint-plugin": "^7.7.1",
-        "@typescript-eslint/parser": "^7.7.1",
+        "@typescript-eslint/eslint-plugin": "^7.8.0",
+        "@typescript-eslint/parser": "^7.8.0",
         "autoprefixer": "^10.4.19",
         "cross-env": "^7.0.3",
-        "eslint": "^9.1.1",
+        "eslint": "^9.2.0",
         "eslint-config-flat-gitignore": "0.1.5",
         "eslint-config-prettier": "^9.1.0",
         "eslint-import-resolver-typescript": "^3.6.1",
@@ -72,15 +73,15 @@
         "eslint-plugin-react": "^7.34.1",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-tailwindcss": "^3.15.1",
-        "globals": "^15.0.0",
+        "globals": "^15.1.0",
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
         "prettier-plugin-organize-imports": "^3.2.4",
         "prettier-plugin-tailwindcss": "^0.5.14",
-        "sass": "^1.75.0",
-        "tsx": "^4.7.3",
+        "sass": "^1.76.0",
+        "tsx": "^4.9.3",
         "typescript": "^5.4.5",
-        "vite": "^5.2.10",
+        "vite": "^5.2.11",
         "vite-tsconfig-paths": "^4.3.2"
     },
     "engines": {
