--- a/package.json
+++ b/package.json
@@ -18,13 +18,24 @@
         "@grpc/proto-loader": "^0.7.13",
         "@mantine/core": "^7.9.0",
         "@mantine/hooks": "^7.9.0",
+        "@mantine/tiptap": "^7.9.0",
         "@remix-run/node": "^2.9.1",
         "@remix-run/react": "^2.9.1",
         "@remix-run/serve": "^2.9.1",
         "@remix-run/server-runtime": "^2.9.1",
         "@tabler/icons-react": "^3.3.0",
+        "@tiptap/extension-highlight": "^2.3.1",
+        "@tiptap/extension-link": "^2.3.1",
+        "@tiptap/extension-subscript": "^2.3.1",
+        "@tiptap/extension-superscript": "^2.3.1",
+        "@tiptap/extension-text-align": "^2.3.1",
+        "@tiptap/extension-underline": "^2.3.1",
+        "@tiptap/pm": "^2.3.1",
+        "@tiptap/react": "^2.3.1",
+        "@tiptap/starter-kit": "^2.3.1",
         "classnames": "^2.5.1",
         "date-fns": "^3.6.0",
+        "hash-wasm": "^4.11.0",
         "http-status-codes": "^2.3.0",
         "i18next": "^23.11.3",
         "i18next-browser-languagedetector": "^7.2.1",
@@ -49,6 +60,7 @@
         "usehooks-ts": "^3.1.0",
         "uuid-mongodb": "^2.5.5",
         "vite-env-only": "^2.2.1",
+        "wretch": "^2.8.1",
         "zod": "^3.23.6",
         "zod-form-data": "^2.0.2"
     },
